# vlottoidx-tauri

./: .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANUAL_CONNECTION_GUIDE.md  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: release.yml
src/: app.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/rpc/: chain_discovery.rs  client.rs  credential_manager.rs  error.rs  mod.rs  types.rs
src-tauri/src/rpc/commands/: currency.rs  identity.rs  marketplace.rs  mod.rs  system.rs  transaction.rs
src/lib/components/: AddressCard.svelte  AddressDetailsModal.svelte  BlockHeightHeader.svelte  CurrenciesCard.svelte  CurrencyCreationModal.svelte  CurrencyDetailsView.svelte  CurrencyListCard.svelte  CurrencyModal.svelte  CurrencySearchCard.svelte  DefiOperationModal.svelte  EstimateConversionModal.svelte  ExportIdentityWarningModal.svelte  IdentityBalanceModal.svelte  IdentityCreationChoiceModal.svelte  IdentityCreationModal.svelte  IdentityDetailsView.svelte  IdentityListCard.svelte  IdentityModal.svelte  IdentityOfferForm.svelte  IdentityRegistrationWithCommitmentModal.svelte  IdentitySearchCard.svelte  MarketplaceOfferModal.svelte  Navigation.svelte  OfferCard.svelte  OfferDetailsModal.svelte  OfferPreview.svelte  OfferTypeSelector.svelte  OnboardingConversionModal.svelte  OperationCard.svelte  index.ts  (+8 more)
src/routes/: +layout.svelte  +page.svelte
(+52 files in other folders)
