[package]
name = "vlottoidx"
version = "0.1.0"
description = "vlottoIDX - Desktop application for Verus blockchain with vlotto lottery viewer"
authors = ["vlottoIDX Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vlottoidx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6", features = [] }
tauri-plugin-opener = "2.4"
reqwest = { version = "0.12", features = ["json", "blocking", "default-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
dirs = "5.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }



[profile.dev.package.objc2]
# Workaround for macOS 11 Big Sur WebKit delegate crash
# See: https://github.com/tauri-apps/tauri/issues/11496
debug-assertions = false

[profile.release]
# Workaround for Rust 1.88.0 bug causing malformed HTTP requests on Intel macOS
# See: https://github.com/rust-lang/rust/issues/144163
opt-level = 1


